Adding test and fixing some issues